--- a/config/zones/PT.yaml
+++ b/config/zones/PT.yaml
@@ -265,6 +265,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 375.95
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 387.05
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -349,6 +352,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 495.95
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 507.05
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
