--- a/config/zones/AX.yaml
+++ b/config/zones/AX.yaml
@@ -75,6 +75,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 641.08
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 889.87
   lifecycle:
     battery discharge:
     - datetime: '2017-01-01'
@@ -162,6 +165,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 885.08
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1133.87
     wind:
       datetime: '2020-01-01'
       source: UNECE 2022, WindEurope "Wind energy in Europe, 2021 Statistics and the
