--- a/config/zones/CZ.yaml
+++ b/config/zones/CZ.yaml
@@ -186,6 +186,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 1051.99
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 1072.25
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -196,6 +199,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 364.25
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 370.68
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -273,6 +279,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 1111.99
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1132.25
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021; IPCC 2014
@@ -283,6 +292,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 484.25
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 490.68
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
