--- a/config/zones/DK.yaml
+++ b/config/zones/DK.yaml
@@ -50,6 +50,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 720.51
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 795.21
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -60,6 +63,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 299.26
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 415.69
     hydro discharge:
     - datetime: '2018-01-01'
       source: Electricity Maps, 2018 average
@@ -83,6 +89,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 641.08
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 1381.0
   lifecycle:
     battery discharge:
     - datetime: '2017-01-01'
@@ -125,6 +134,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 780.51
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 855.21
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021; IPCC 2014
@@ -135,6 +147,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 419.26
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 535.69
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -178,6 +193,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 885.08
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1625.0
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
