--- a/config/zones/IT-SO.yaml
+++ b/config/zones/IT-SO.yaml
@@ -118,6 +118,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 1001.28
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 972.66
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -128,6 +131,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 415.98
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 434.62
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -160,6 +166,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 860.73
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 905.42
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -208,6 +217,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 1061.28
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1032.66
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021; IPCC 2014
@@ -218,6 +230,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 535.98
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 554.62
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -267,6 +282,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 1104.73
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1149.42
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
