--- a/config/zones/IT.yaml
+++ b/config/zones/IT.yaml
@@ -57,6 +57,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 1001.28
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 972.66
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -67,6 +70,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 415.98
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 434.62
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -99,6 +105,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 860.73
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 905.42
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -147,6 +156,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 1061.28
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1032.66
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021; IPCC 2014
@@ -157,6 +169,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 535.98
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 554.62
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -206,6 +221,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 1104.73
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1149.42
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
