--- a/config/zones/LU.yaml
+++ b/config/zones/LU.yaml
@@ -155,6 +155,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 410.56
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 415.69
     hydro discharge:
     - datetime: '2021-01-01'
       source: Electricity Maps, 2021 average
@@ -219,6 +222,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 530.56
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 535.69
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
