--- a/config/zones/LV.yaml
+++ b/config/zones/LV.yaml
@@ -165,6 +165,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 1048.2
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 1041.07
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021
@@ -175,6 +178,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 371.24
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 349.46
     hydro discharge:
     - datetime: '2015-01-01'
       source: Electricity Maps, 2015 average
@@ -207,6 +213,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023
       value: 641.08
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024
+      value: 889.87
   lifecycle:
     battery discharge:
     - datetime: '2015-01-01'
@@ -253,6 +262,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 1108.2
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1101.07
     gas:
     - datetime: '2021-01-01'
       source: EU-ETS, ENTSO-E 2021; IPCC 2014
@@ -263,6 +275,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 491.24
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 469.46
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -312,6 +327,9 @@ emissionFactors:
     - datetime: '2023-01-01'
       source: EU-ETS, ENTSO-E 2023; IPCC 2014
       value: 885.08
+    - datetime: '2024-01-01'
+      source: EU-ETS, ENTSO-E 2024; IPCC 2014
+      value: 1133.87
     solar:
       datetime: '2021-01-01'
       source: INCER ACV
